--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,10 @@ h1{
     color: white;
     border-color: #007bff;
   }
+
+#scroll-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+}
