--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .logo img {
@@ -41,9 +44,10 @@ nav li {
   cursor: pointer;
 }
 
+/* slide introduce products */
 .slide {
   height: 351px;
-  overflow: hidden
+  overflow: hidden;
 }
 
 .img_slide {
@@ -51,6 +55,8 @@ nav li {
   margin: 0px;
 }
 
+
+/* card for each product */
 .filterable_card {
   display: flex;
   margin-top: 25px;
@@ -88,4 +94,20 @@ nav li {
   font-size: 25px;
   font-weight: 700;
   color: red;
+}
+
+/* Button scroll to top */
+.scr_btn {
+  width: 30px;
+  height: 30px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background-color: #e05d73;
+  color: #fff;
+  text-align: center;
+  line-height: 30px;
+  font-size: 12px;
+  z-index: 100;
+  border-radius: 18px;
 }
