--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,54 @@
+* {
+  scrollbar-color: #bdb7af #f1efeb;
+  box-sizing: border-box;
+}
+
 body {
+  /* Can su dung font chu khac dep hon, e.g: "Montserrat", sans-serif */
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  color: rgb(69, 75, 78);
+  line-height: 1.5;
+  font-size: 14px;
 }
 
-header {
+/* header{
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+} */
+
+.top-nav {
+  border-bottom-color: rgb(236, 232, 227);
+  height: 100px;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  border-bottom: 1px solid #e9e9e9;
+}
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  max-width: 1270px;
+}
+
+.header-right .header-right-inner .header-top-left
+{
+  /* padding-right: 25px;
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+  padding-right: 35px; */
   background-color: #fff;
   display: flex;
   justify-content: space-between;
@@ -15,8 +59,36 @@ header {
   z-index: 100;
 }
 
+.flex-align-item {
+  align-items: center;
+}
+
+.flexbox{
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
 .logo img {
-  width: 150px;
+  width: 160px;
+}
+
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+
+.img-responsive{
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+div {
+  display: block;
+  unicode-bidi: isolate;
 }
 
 nav ul {
