--- a/styles.css
+++ b/styles.css
@@ -191,3 +191,84 @@ nav li {
   z-index: 100;
   border-radius: 18px;
 }
+
+.page_login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: aliceblue;
+}
+
+.login_form {
+  width: 420px;
+  background-color: azure; 
+}
+
+.login_form h1 {
+  font-size: 36px;
+  text-align: center;
+}
+
+.input_box {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+}
+
+.input_box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: 2px solid;
+  outline: none;
+  border-radius: 40px;
+  font-size: 16px;
+  padding: 20px 45px 20px 20px;
+}
+
+.input_box input::placeholder {
+  color: deeppink;
+}
+
+.input_box i {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+}
+
+.login_form .remember_forgot {
+  display: flex;
+  justify-content: space-between;
+  margin: -15px 0 10px;
+}
+
+.remember_forgot label input {
+  margin-right: 3px;
+}
+
+.remember_forgot a:hover {
+  text-decoration: underline;
+}
+
+.btn_login {
+  width: 100%;
+  height: 40px;
+  border-radius: 40px;
+  background-color: lightblue;
+}
+
+.register {
+  text-align: center;
+}
+
+.register a {
+  font-weight: 600;
+}
+
+.register a:hover {
+  text-decoration: underline;
+}
