--- a/styles.css
+++ b/styles.css
@@ -197,12 +197,12 @@ nav li {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: aliceblue;
 }
 
 .login_form {
   width: 420px;
-  background-color: azure; 
+  background-color: #fefefe;
+  box-shadow: 2px 2px 5px 5px #ececec;
 }
 
 .login_form h1 {
@@ -258,7 +258,7 @@ nav li {
   width: 100%;
   height: 40px;
   border-radius: 40px;
-  background-color: lightblue;
+  background-color: rgb(92, 149, 169);
 }
 
 .register {
@@ -275,4 +275,51 @@ nav li {
 
 .filterable_card a {
   text-decoration: none;
+}
+
+.social_login {
+  text-align: center;
+}
+
+.social-field{
+  padding: 15px;
+  display: block;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 40px;
+  border: solid;
+}
+
+.social-field a {
+  text-decoration: none;
+  
+}
+
+.social_login hr {
+  width: 50%;
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.facebook {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  background-color: #0751a0;
+}
+
+.facebook a {
+  color: white;
+}
+
+.google {
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.google a {
+  color: black;
 }
