Link to main css, js file for product detail page

--- a/styles.css
+++ b/styles.css
@@ -323,3 +323,11 @@ nav li {
 .google a {
   color: black;
 }
+
+
+/* product detail page */
+.product-img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
