--- a/styles.css
+++ b/styles.css
@@ -199,13 +199,13 @@ nav li {
   min-height: 100vh;
 }
 
-.login_form {
+.login_form, .register_form {
   width: 420px;
   background-color: #fefefe;
   box-shadow: 2px 2px 5px 5px #ececec;
 }
 
-.login_form h1 {
+.login_form h1, .register_form h1 {
   font-size: 36px;
   text-align: center;
 }
@@ -254,14 +254,14 @@ nav li {
   text-decoration: underline;
 }
 
-.btn_login {
+.btn_login, .btn_register {
   width: 100%;
   height: 40px;
   border-radius: 40px;
   background-color: rgb(92, 149, 169);
 }
 
-.register {
+.register, .login {
   text-align: center;
 }
 
