--- a/styles.css
+++ b/styles.css
@@ -17,16 +17,16 @@ body {
   font-size: 14px;
 }
 
-/* header{
+header{
   background-color: #fff;
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
   position: sticky;
   top: 0;
-  z-index: 100;
-} */
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+}
 
 .dropdown:hover .dropdown-menu {
   display: flex;
@@ -114,8 +114,16 @@ a {
   text-decoration: none;
 }
 
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 nav ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
 }
 
@@ -123,11 +131,37 @@ nav li {
   margin-right: 20px;
 }
 
+nav a{
+  text-decoration: none;
+  color: #333;
+}
+
 .search input {
-  padding: 10px;
+  /* padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  width: 250px;
+  width: 250px; */
+  width: 100%;
+  background: #f5f5f5;
+  font-size: 13px;
+  color: #222;
+  border: 0;
+  border-radius: 50px;
+  min-height: 38px;
+}
+
+.header-top .search {
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #fff;
+  margin-top: 0px;
+  -moz-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  z-index: -1;
+  left: 0px;
+  top: 100%;
 }
 
 .search button {
