--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,12 @@ nav a{
   padding: 5px 0 0 0;
 }
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Button scroll to top */
 .scr_btn {
   width: 30px;
