--- a/styles.css
+++ b/styles.css
@@ -577,3 +577,62 @@ th:nth-child(3), td:nth-child(3) {
 th:last-child, td:last-child {
   width: 15%;
 }
+
+.card_revenue {
+  flex-basis: 300px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  margin: 50px 10px 10px 10px;
+  height: 150px;
+}
+
+.card_revenue-logo {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px;
+}
+
+.card_revenue-logo div:first-child {
+  border-radius: 8px;
+  background-color: #a7949455;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  margin-top: -30px;
+}
+
+.card_revenue-logo div:first-child img{
+  margin: 10px;
+}
+
+.card_revenue-title {
+  font-size: 14px;
+  font-weight: bold;
+  color: #9b9898;
+  margin: 10px;
+  text-align: right;
+}
+
+.card_revenue-value {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: right;
+  margin-top: -10px;
+  margin-right: 15px;
+}
+
+.card_revenue-percentage_plus {
+  font-size: 14px;
+  color: #88e981;
+}
+
+.card_revenue-percentage_minus {
+  font-size: 14px;
+  color: #e95058;
+}
+
+.card_revenue-text {
+  font-size: 14px;
+  color: #9b9898;
+  margin: 30px 20px 20px 20px;
+  text-align: left;
+}
